--- a/views/forget_password.hbs
+++ b/views/forget_password.hbs
@@ -3,14 +3,14 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="utf-8" />
-  <title>註冊頁面</title>
+  <title>忘記密碼</title>
   <style>
     * {
       font-family: 微軟正黑體;
     }
 
     h3,
-    #confirm_password,
+    #email,
     #username,
     #password {
       width: 400px;
@@ -32,7 +32,7 @@
       margin: 50px;
       padding: 10px;
       width: 460px;
-      height: 430px;
+      height: 380px;
       background-color: white;
       border-radius: 5px;
       border-top: 25px solid #335495;
@@ -85,24 +85,22 @@ background-attachment: fixed;backdrop-filter:blur(3px);" background='../350.jpg'
   <div class="system_name">
     <h2 style="color: white" ;>高雄大學住宿管理系統</h2>
   </div>
-  <div class="register_page">
+  <div class="forget_password_page">
     <div id="container">
-      <div class="Register">
-        <h3>註冊 Register</h3>
-        <form action="/auth/register" method="POST">
+      <div class="Forget_password">
+        <center><h3>忘記密碼</h3></center>
+        <form action="/auth/forget_password" method="POST">
           <input type="text" id="username" name="username" placeholder="帳號" required="required"
             oninvalid="setCustomValidity('請輸入帳號！')" oninput="setCustomValidity('')">
           <div class="tab"></div>
-          <input type="password" id="password" name="password" placeholder="密碼" required="required"
-            oninvalid="setCustomValidity('請輸入密碼！')" oninput="setCustomValidity('')">
+          <input type="email" id="email" name="email" placeholder="電子郵件" required="required"
+            oninvalid="setCustomValidity('請輸入電子郵件！')" oninput="setCustomValidity('')">
           <div class="tab"></div>
-          <input type="password" id="confirm_password" name="confirm_password" placeholder="確認密碼" required="required"
-            oninvalid="setCustomValidity('請輸入確認密碼！')" oninput="setCustomValidity('')">
           <div class="tab"></div>
-          <input type="submit" value="註冊" class="submit" />
+          <input type="submit" value="忘記密碼" class="submit" />
         </form>
         <a href="/login">
-          <h5>登入帳號</h5>
+          <h5>返回登入頁面</h5>
         </a>
       </div>
       {{#if message}}
