--- a/views/change_password.hbs
+++ b/views/change_password.hbs
@@ -3,16 +3,17 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="utf-8" />
-  <title>註冊頁面</title>
+  <title>更改密碼</title>
   <style>
     * {
       font-family: 微軟正黑體;
     }
 
     h3,
-    #confirm_password,
+    #confirm_new_password,
     #username,
-    #password {
+    #old_password,
+    #new_password {
       width: 400px;
       height: 40px;
       margin: 15px;
@@ -32,7 +33,7 @@
       margin: 50px;
       padding: 10px;
       width: 460px;
-      height: 430px;
+      height: 500px;
       background-color: white;
       border-radius: 5px;
       border-top: 25px solid #335495;
@@ -85,24 +86,26 @@ background-attachment: fixed;backdrop-filter:blur(3px);" background='../350.jpg'
   <div class="system_name">
     <h2 style="color: white" ;>高雄大學住宿管理系統</h2>
   </div>
-  <div class="register_page">
+  <div class="change_password_page">
     <div id="container">
-      <div class="Register">
-        <h3>註冊 Register</h3>
-        <form action="/auth/register" method="POST">
+      <div class="Change_password">
+        <center><h3>更改密碼</h3></center>
+        <form action="/auth/change_password" method="POST">
           <input type="text" id="username" name="username" placeholder="帳號" required="required"
             oninvalid="setCustomValidity('請輸入帳號！')" oninput="setCustomValidity('')">
           <div class="tab"></div>
-          <input type="password" id="password" name="password" placeholder="密碼" required="required"
-            oninvalid="setCustomValidity('請輸入密碼！')" oninput="setCustomValidity('')">
+          <input type="password" id="old_password" name="old_password" placeholder="舊密碼" required="required"
+            oninvalid="setCustomValidity('請輸入舊密碼！')" oninput="setCustomValidity('')">
           <div class="tab"></div>
-          <input type="password" id="confirm_password" name="confirm_password" placeholder="確認密碼" required="required"
-            oninvalid="setCustomValidity('請輸入確認密碼！')" oninput="setCustomValidity('')">
+          <input type="password" id="new_password" name="new_password" placeholder="新密碼" required="required"
+            oninvalid="setCustomValidity('請輸入新密碼！')" oninput="setCustomValidity('')">
+          <input type="password" id="confirm_new_password" name="confirm_new_password" placeholder="確認新密碼" required="required"
+            oninvalid="setCustomValidity('請確認新密碼！')" oninput="setCustomValidity('')">
           <div class="tab"></div>
-          <input type="submit" value="註冊" class="submit" />
+          <input type="submit" value="確定更改" class="submit" />
         </form>
         <a href="/login">
-          <h5>登入帳號</h5>
+          <h5>返回登入頁面</h5>
         </a>
       </div>
       {{#if message}}
