--- a/views/forget_password.hbs
+++ b/views/forget_password.hbs
@@ -97,7 +97,7 @@ background-attachment: fixed;backdrop-filter:blur(3px);" background='../350.jpg'
             oninvalid="setCustomValidity('請輸入電子郵件！')" oninput="setCustomValidity('')">
           <div class="tab"></div>
           <div class="tab"></div>
-          <input type="submit" value="忘記密碼" class="submit" />
+          <input type="submit" value="重置密碼" class="submit" />
         </form>
         <a href="/login">
           <h5>返回登入頁面</h5>
