增加修改學生資料，和舍監頁面

--- a/views/home_manager.hbs
+++ b/views/home_manager.hbs
@@ -98,8 +98,17 @@
               ><h2 class="post-title">管理人員資料</h2>
               <h5 class="post-subtitle">
                 管理人員可以在此查看基本資料，並提供更新資料之功能
-              </h5></a
-            >
+              </h5></a>
+          </div>
+            <hr class="my-4" />
+          <!-- Post preview-->
+          <div class="post-preview">
+            <a href="/manager_to_warden">
+              <h2 class="post-title">舍監基本資料</h2>
+              <h5 class="post-subtitle">
+                管理人員可以在此新增新舍監 刪除舍監 查詢舍監 修改舍監基本資料
+              </h5>
+            </a>
           </div>
           <hr class="my-4" />
           <!-- Post preview-->
@@ -107,7 +116,7 @@
             <a href="/manager_to_student">
               <h2 class="post-title">學生基本資料</h2>
               <h5 class="post-subtitle">
-                管理人員可以在此新增新學生 刪除學生 查詢學生基本資料
+                管理人員可以在此新增新學生 刪除學生 查詢學生 修改學生基本資料
               </h5>
             </a>
           </div>
@@ -134,16 +143,16 @@
             </a>
           </div>
           <!-- Divider-->
-          <hr class="my-4" />
+          {{!-- <hr class="my-4" />
           <!-- Post preview-->
           <div class="post-preview">
-            <a href="/manager_to_violation">
+            <a href="/warden_to_violation">
               <h2 class="post-title">學生違規紀錄</h2>
               <h5 class="post-subtitle">
-                管理人員可以查詢學生違規紀錄並提供修改違規內容及懲處之功能
+                舍監可以查詢學生違規紀錄並提供修改違規內容及懲處之功能
               </h5>
             </a>
-          </div>
+          </div> --}}
           <!-- Divider-->
           <hr class="my-4" />
           <!-- Pager-->
