缺大樓宿舍之學生住宿資訊及退換宿細節

--- a/views/manager_to_dormitory.hbs
+++ b/views/manager_to_dormitory.hbs
@@ -41,6 +41,14 @@
                 </span>
               </a>
             </li>
+             <li class="nav-item">
+              <a class="nav-link px-lg-3 py-3 py-lg-4"
+              href="/login">房間設備資訊</a>
+            </li>
+             <li class="nav-item">
+              <a class="nav-link px-lg-3 py-3 py-lg-4"
+              href="/login">學生住宿資訊</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4"
               href="/login">Log out</a>
