--- a/views/manager_checkout_dormitory.hbs
+++ b/views/manager_checkout_dormitory.hbs
@@ -115,7 +115,7 @@
                   <th></th>
                 </tr>
               </thead>
-              <form action="/managerToApply/action" method="POST">
+              <form action="" method="POST">
                 <tr>
                   <td align='center' valign="middle">
                     <input type="text" class="form-control" id="studentID" name="studentID" value="" placeholder="" style="width: 100px"/>
