--- a/views/student_to_supervisor.hbs
+++ b/views/student_to_supervisor.hbs
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>高雄大學宿舍管理系統</title>
+    <title>舍監基本資料</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
@@ -29,17 +29,11 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/styles.css" rel="stylesheet" />
   </head>
-  <body style="background-color: #f2f3eb">
+  <body>
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
       <div class="container px-4 px-lg-5">
-        <img
-          src="logo.jpg"
-          style="margin-left: 0px"
-          width="100px"
-          height="100px"
-        /><img />
-
+        <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
         <button
           class="navbar-toggler"
           type="button"
@@ -48,28 +42,24 @@
           aria-controls="navbarResponsive"
           aria-expanded="false"
           aria-label="Toggle navigation"
-        >
+         >
           Menu
           <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto py-4 py-lg-0">
             <li class="list-inline-item">
-              <a href="/">
+              <a href="/" class="home">
                 <span class="fa-stack fa-lg">
-                  <i
-                    style="width: 50px; height: 50px;color:#ffffff"
-                    class="fa-solid fa-house-user"
-                  ></i>
+                  <button data-bs-toggle="tooltip" data-bs-placement="top" title="返回首頁"
+                  style="width: 50px; height: 50px;color:#ffffff"
+                  class="fa-solid fa-house-user"
+                ></button>
                 </span>
               </a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link px-lg-3 py-3 py-lg-4"
-                href="/dormitory_detail"
-                >Introduction</a
-              >
+              <a class="nav-link px-lg-3 py-3 py-lg-4" href="/dormitory_detail" >Introduction</a  >
             </li>
             <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4"
@@ -80,99 +70,45 @@
       </div>
     </nav>
     <!-- Page Header-->
-    <header
-      class="masthead"
-      style="background-image: url('../dormitory.jpg')"
-    >
+    <header class="masthead" style="background-image: url('../home-bg.jpg')" >
       <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-10 col-lg-8 col-xl-7">
             <div class="site-heading">
-              <h1>高大住宿管理系統</h1>
+              <h1>舍監基本資料</h1>
             </div>
           </div>
         </div>
       </div>
     </header>
-    <!-- Main Content-->
-    <div class="container px-4 px-lg-5">
-      <div class="row gx-4 gx-lg-5 justify-content-center">
-        <div class="col-md-10 col-lg-8 col-xl-7">
-          <!-- Post preview-->
-          <div class="post-preview">
-  
-            <a href="/student">
-              <h2 class="post-title" style="display: inline;">學生基本資料</h2>
-              <h5 class="post-subtitle">學生可以在此查看自己的基本資料，並可修改連絡電話及e-mail</h5>
-            </a>
-          </div>
-            <hr class="my-4" />
-          <!-- Post preview-->
-          <div class="post-preview">
-            <a href="/student_to_supervisor"
-              ><h2 class="post-title">舍監基本資料</h2>
-              <h5 class="post-subtitle">
-                學生可以在此查看所有舍監的基本資料，以利學生聯絡
-              </h5></a
-            >
-          </div>
-          <!-- Divider-->
-          <hr class="my-4" />
-          <!-- Post preview-->
-          <div class="post-preview">
-            <a href="/student_to_manager"
-              ><h2 class="post-title">管理人員資料</h2>
-              <h5 class="post-subtitle">
-                學生可以在此查看所有管理人員的基本資料，以利學生聯絡
-              </h5></a
-            >
-          </div>
-          <!-- Divider-->
-          <hr class="my-4" />
-          <!-- Post preview-->
-          <div class="post-preview">
-            <a href="/student_to_apply">
-              <h2 class="post-title">申請住宿資料</h2>
-              <h5 class="post-subtitle">學生可以在此申請住宿資料，並可瀏覽目前申請狀況及自動分發後的房間</h5>
-            </a>
-          </div>
-          <!-- Divider-->
-          <hr class="my-4" />
-          <!-- Post preview-->
-          <div class="post-preview">
-            <a href="/student_to_dormitory">
-              <h2 class="post-title">宿舍大樓資料</h2>
-              <h5 class="post-subtitle">
-                學生可以瀏覽所有的宿舍介紹，並可查看及報修該學生房間之設備
-              </h5>
-            </a>
-          </div>
-          <!-- Divider-->
-          <hr class="my-4" />
-          <!-- Post preview-->
-          <div class="post-preview">
-            <a href="/student_to_violation">
-              <h2 class="post-title">學生違規紀錄</h2>
-              <h5 class="post-subtitle">學生可以查看自己的違規紀錄</h5>
-            </a>
-          </div>
-          <!-- Divider-->
-          <hr class="my-4" />
-          <!-- Pager-->
-          <div class="d-flex justify-content-end mb-4">
-            <a
-              class="btn btn-primary text-uppercase"
-              href="/student_to_message"
-              >公告及留言板 →</a
-            >
-          </div>
-        </div>
-      </div>
-      <br><br><br>
-    </div>
+    <!-- Post Content-->
+    <div class="container">
+      <table style="line-height: 30px" class="table table-hover">
+        <!--表示表格中不同直行 (column) 的標題-->
+        <tr style="background-color: #dfd1ef">
+          <!--定義表格的橫列 (row)-->
+          <th scope="col" align='center' valign="middle">舍監編號</th>
+          <th scope="col" align='center' valign="middle">名稱</th>
+          <th scope="col" align='center' valign="middle">連絡電話</th>
+          <th scope="col" align='center' valign="middle">Email</th>
+        </tr>
 
+        <tbody>
+           {{#each message}} 
+          <tr>
+            <th scope="row" align='center' valign="middle">{{this.M_ID}}</th>
+            <td >{{this.M_Name}}</td>
+            <td >{{this.M_Phone}}</td>
+            <td >{{this.M_Email}}</td>
+          </tr>      
+          {{/each}} 
+          <tr></tr>
+        </tbody>
+      </table>
+    </div>
     <a href="#top" class="top" style="float: right;display: none;" id="up"><i  style="width: 50px;height: 50px;"class="fa-regular fa-circle-up"></i></a>
     <!-- Footer-->
+    <br /><br /><br /><br /><br /><br /> <br /><br /><br /><br /><br /><br />
     <footer class="border-top">
       <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
