--- a/views/student_to_apply.hbs
+++ b/views/student_to_apply.hbs
@@ -127,12 +127,12 @@
             <!--表示表格中不同直行 (column) 的標題-->
             <tr style="background-color: #dfd1ef">
               <!--定義表格的橫列 (row)-->
-              <th scope="col" align="center" valign="middle">學生編號</th>
-              <th scope="col" align="center" valign="middle">學年度</th>
-              <th scope="col" align="center" valign="middle">學期</th>
-              <th scope="col" align="center" valign="middle">申請日期</th>
-              <th scope="col" align="center" valign="middle">核可與否</th>
-              <th scope="col" align="center" valign="middle">繳費狀況</th>
+              <th scope="col" align="center" valign="middle" style="font-size:20px">學生編號</th>
+              <th scope="col" align="center" valign="middle" style="font-size:20px">學年度</th>
+              <th scope="col" align="center" valign="middle" style="font-size:20px">學期</th>
+              <th scope="col" align="center" valign="middle" style="font-size:20px">申請日期</th>
+              <th scope="col" align="center" valign="middle" style="font-size:20px">核可與否</th>
+              <th scope="col" align="center" valign="middle" style="font-size:20px">繳費狀況</th>
               <th></th>
               <th></th>
             </tr>
