--- a/views/manager_to_dormitory.hbs
+++ b/views/manager_to_dormitory.hbs
@@ -139,11 +139,11 @@
                         <div class="modal-body">
                           <div class="mb-3">
                             <label for="recipient-name" class="col-form-label" style="color: #335495; font-weight: bold">大樓名稱:</label>
-                            <input type="text" class="form-control" id="type" name="type"/>
+                            <input type="text" class="form-control" id="dormitory_name" name="dormitory_name"/>
                           </div>
                           <div class="mb-3">
                             <label for="message-text" class="col-form-label" style="color: #335495; font-weight: bold" >宿舍房號:</label>
-                            <input type="text" class="form-control" id="quantity" name="quantity"/>
+                            <input type="text" class="form-control" id="room_name" name="room_name"/>
                           </div>
                         </div>
                         <div class="modal-footer">
@@ -187,13 +187,13 @@
         <form action="/managerToDormitory/action" method="post">
           <input type="hidden" name="searchSQL" value="{{../searchSQL}}"/>
           <input type="hidden" name="building" value="{{this.DB_Number}}">
-          <input type="hidden" name="room" value="{{this.E_D_Dormitory_No}}">
-          <input type="hidden" name="type" value="{{this.E_Type}}">
+          <input type="hidden" name="room" value="{{this.D_Number}}">
+          {{!-- <input type="hidden" name="type" value="{{this.E_Type}}"> --}}
           <th scope="row" align='center' valign="middle">
             <input type="text"  class="form-control"name="DB_Name" value=" {{this.DB_Name}}" />
           </th>
             <td align='center' valign="middle">
-                <input type="text" class="form-control" name="Dormitory_No" value="{{this.E_D_Dormitory_No}}"/>
+                <input type="text" class="form-control" name="Dormitory_No" value="{{this.D_Number}}"/>
             </td>
             <td align='center' valign="middle">
               <div class="form-floating">
