--- a/views/home_manager.hbs
+++ b/views/home_manager.hbs
@@ -66,6 +66,10 @@
             </li>
             <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4"
+              href="/modify_account">Modify account</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-lg-3 py-3 py-lg-4"
               href="/login">Log out</a>
             </li>
           </ul>
