--- a/views/manager_studentAccommodation.hbs
+++ b/views/manager_studentAccommodation.hbs
@@ -73,7 +73,7 @@
     <div class="accordion" id="accordionExample">
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
-          <button class="button" style=" text-align: center; background-color: #ffffff; border: 4px #a67fd2 outset; color: #000000; " type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne"> 查詢 / 新增學生住宿資訊</button>
+          <button class="button" style=" text-align: center; background-color: #ffffff; border: 4px #a67fd2 outset; color: #000000; " type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne"> 查詢學生住宿資訊</button>
           <i class="fa-solid fa-caret-down"></i>
         </h2>
         <div
@@ -124,70 +124,23 @@
                           <option value="下">下學期</option>
                         </select>
                       </td>
-                      <td align='center' valign="middle">
-                        <input type="text" class="form-control" id="" name="" value="" style="width: 130px" />
-                      </td>
+                     <td align='center' valign="middle">
+                    <select id="building" name="building" class="form-select">
+                      <option selected>選擇大樓</option>
+                      <option value=1>學生第一宿舍(OA-男)</option>
+                      <option value=2>學生第一宿舍(OB-女)</option>
+                      <option value=3>學生第二宿舍(OE-男)</option>
+                      <option value=4>學生第二宿舍(OF-女)</option>
+                      <option value=5>綜合宿舍(B01-男)</option>
+                    </select>
+                  </td>
                       <td align='center' valign="middle">
                         <input type="text" class="form-control" id="" name="" value="" style="width: 130px" />
                       </td>
                       <td>
                         <button style=" width: 75px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset; "type="submit"name="action"value="search">查詢</button>
                       </td>
-                     <td>
-                        <button type="button" style="width: 75px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset; " data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo"> 新增</button>
-                      </td>
-                      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <h5 class="modal-title" id="exampleModalLabel" style="color: #000000; font-weight: bold">
-                                新增學生住宿資訊
-                              </h5>
-                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                              <div class="row">
-                                <div class="col-md-6">
-                                  <label for="recipient-name" class="col-form-label" style="color: #335495; font-weight: bold">學生編號:</label>
-                                  <input type="text" class="form-control" id="" name="studentID"/>
-                                </div>
-                                <div class="col-md-6">
-                                  <label for="message-text" class="col-form-label" style="color: #335495; font-weight: bold" >姓名:</label>
-                                  <input type="text" class="form-control" id="" name="studentName"/>
-                                </div>
-                              </div>
-                            <div class="row">
-                              <div class="col-md-6">
-                                <label for="message-text" class="col-form-label" style="color: #335495; font-weight: bold" >學年度:</label>
-                                <input type="text" class="form-control" id="" name=""/>
-                              </div>
-                              <div class="col-md-6">
-                                <label for="message-text" class="col-form-label" style="color: #335495; font-weight: bold" >學期:</label>
-                                <input type="text" class="form-control" id="" name=""/>
-                              </div>
-                              </div>
-                              <div class="row">
-                                <div class="col-md-6">
-                                  <label for="message-text" class="col-form-label" style="color: #335495; font-weight: bold" >住宿大樓:</label>
-                                  <input type="text" class="form-control" id="" name=""/>
-                                </div>
-                                <div class="col-md-6">
-                                  <label for="message-text" class="col-form-label" style="color: #335495; font-weight: bold" >宿舍房號:</label>
-                                  <input type="text" class="form-control" id="" name=""/>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="modal-footer">
-                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" >
-                                關閉
-                              </button>
-                              <button type="submit" name="action" value="add" class="btn btn-primary">
-                                新增
-                              </button>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+
                     </tr>
                   </form>
                 </table>
