--- a/views/manager_studentAccommodation.hbs
+++ b/views/manager_studentAccommodation.hbs
@@ -119,75 +119,25 @@
                       </td>
                       <td align='center' valign="middle">
                         <select id="sex" name="sex" style="width: 130px" class="form-select" >
-                          <option selected>選擇學期</option>
+                          <option selected>選擇性別</option>
                           <option value="男">男</option>
                           <option value="女">女</option>
                         </select>
                       </td>
                       <td align='center' valign="middle">
-                        <input type="text" class="form-control" id="building" name="building" value="" style="width: 130px" />
-                      </td>
+                      <select id="building" name="building" class="form-select">
+                        <option selected>選擇大樓</option>
+                        {{#each Dormessage}}
+                        <option value={{this.DB_Number}}>{{this.DB_Name}}</option>
+                        {{/each}}
+                      </select>
+                    </td>
                       <td align='center' valign="middle">
-                        <input type="text" class="form-control" id="room" name="" value="room" style="width: 130px" />
+                        <input type="text" class="form-control" id="room" name="room" value="" style="width: 130px" />
                       </td>
                       <td>
                         <button style=" width: 75px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset; "type="submit"name="action"value="search">查詢</button>
                       </td>
-                     <td>
-                        <button type="button" style="width: 75px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset; " data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo"> 新增</button>
-                      </td>
-                      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <h5 class="modal-title" id="exampleModalLabel" style="color: #000000; font-weight: bold">
-                                新增學生住宿資訊
-                              </h5>
-                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                              <div class="row">
-                                <div class="col-md-6">
-                                  <label for="recipient-name" class="col-form-label" style="color: #335495; font-weight: bold">學生編號:</label>
-                                  <input type="text" class="form-control" id="" name="studentID"/>
-                                </div>
-                                <div class="col-md-6">
-                                  <label for="message-text" class="col-form-label" style="color: #335495; font-weight: bold" >姓名:</label>
-                                  <input type="text" class="form-control" id="" name="studentName"/>
-                                </div>
-                              </div>
-                            <div class="row">
-                              <div class="col-md-6">
-                                <label for="message-text" class="col-form-label" style="color: #335495; font-weight: bold" >學年度:</label>
-                                <input type="text" class="form-control" id="" name=""/>
-                              </div>
-                              <div class="col-md-6">
-                                <label for="message-text" class="col-form-label" style="color: #335495; font-weight: bold" >學期:</label>
-                                <input type="text" class="form-control" id="" name=""/>
-                              </div>
-                              </div>
-                              <div class="row">
-                                <div class="col-md-6">
-                                  <label for="message-text" class="col-form-label" style="color: #335495; font-weight: bold" >住宿大樓:</label>
-                                  <input type="text" class="form-control" id="" name=""/>
-                                </div>
-                                <div class="col-md-6">
-                                  <label for="message-text" class="col-form-label" style="color: #335495; font-weight: bold" >宿舍房號:</label>
-                                  <input type="text" class="form-control" id="" name=""/>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="modal-footer">
-                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" >
-                                關閉
-                              </button>
-                              <button type="submit" name="action" value="add" class="btn btn-primary">
-                                新增
-                              </button>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
                     </tr>
                   </form>
                 </table>
@@ -219,22 +169,28 @@
       <tbody>
         {{#each message}}
         <tr>
-          <td >{{this.A_Student_ID}}</td>
-          <td >{{this.A_Academic_Year}}</td>
-          <td >{{this.A_Semester}}</td>
-          <td >{{this.A_Date}}</td>
-          <td >{{this.A_Approval}}</td>
-          <td >{{this.A_Bill}}</td>
-          <td >{{this.A_Bill}}</td>
-          <td >{{this.A_Bill}}</td>
+          <form action="/managerToStudentAccommodation/action" method="post">
+          <td >{{this.S_ID}}</td>
+          <td >{{this.S_Name}}</td>
+          <td >{{this.S_Academic_Year}}</td>
+          <td >{{this.S_Sex}}</td>
+          <td ><select id="building" name="building" class="form-select">
+                        <option value={{this.DB_Number}} selected>{{this.DB_Name}}</option>
+                        {{#each this.dor}}
+                        <option value={{this.DB_Number}}>{{this.DB_Name}}</option>
+                        {{/each}}
+            </select></td>
           <td></td>
           <td></td>
-            <form action="/managerToStudentAccommodation/action" method="post">
+
             <input type="hidden" name="searchSQL" value="{{../searchSQL}}">
-            <input type="hidden" name="number" value="{{this.A_Number}}">
-            <input type="hidden" name="studentID" value="{{this.A_Student_ID}}">
+            {{!-- <input type="hidden" name="number" value="{{this.A_Number}}"> --}}
+            <input type="hidden" name="studentID" value="{{this.S_ID}}">
+            <td align='center' valign="middle">
+                <input type="text" class="form-control" name="room" value="{{this.S_Dormitory_No}}"/>
+            </td>
             <td>
-              <button type="submit" name="action"  style=" width: 100px; height: 40px; background-color: #5769b4; color: #ffffff; border: 2px #5769b4 outset; "value="">修改</button>
+              <button type="submit" name="action"  style=" width: 100px; height: 40px; background-color: #5769b4; color: #ffffff; border: 2px #5769b4 outset; "value="update">修改</button>
             </td>
             <td>
               <button type="submit" name="action" style=" width: 100px; height: 40px; background-color: #e74a3b; color: #ffffff; border: 2px #d44141 outset; "value="delete">刪除</button>
